Fix wallet name missing space

--- a/app/style/AccountsPage.less
+++ b/app/style/AccountsPage.less
@@ -26,3 +26,8 @@
 .account-content-title-buttons-area {
   margin-left: auto;
 }
+
+.wallet-name {
+  margin-right: 5px;
+  text-transform: capitalize;
+}
